force-app/main/default/objects/NS_Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NS Payments</relationshipLabel>
    <relationshipName>NS_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>