force-app/main/default/objects/NS_Payment__c/fields/NetSuite_Invoices__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Invoices</label>
    <referenceTo>NetSuiteInvoices__c</referenceTo>
    <relationshipLabel>NS Payments</relationshipLabel>
    <relationshipName>NS_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>